[Added] design for the header

--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -3,6 +3,7 @@ $text-secondary: #3E3E3E;
 
 $el-white-main: #D9D9D9;
 $el-active-blue: #0D3FF1;
+$el-active-blue-hover: #120DF1;
 $el-inactive-blue: #4C70F0;
 $el-inactive-gray: #3E3E3E;
 $el-border-gray: #232323;
