--- a/Client/src/assets/styling/abstracts/_fonts.scss
+++ b/Client/src/assets/styling/abstracts/_fonts.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Roboto:wght@700;900&display=swap');
 
 $font-title-black: (
   font-family: 'Roboto',
