--- a/Client/src/assets/styling/components/_consumerNav.scss
+++ b/Client/src/assets/styling/components/_consumerNav.scss
@@ -2,7 +2,10 @@
 @use '../abstracts/fonts' as *;
 
 nav {
-    padding: 16px 16px;
+    width: 100vw;
+    padding: 10px 16px;
+    position: fixed;
+    z-index: 1;
 
     .nav-parent-container {
         display: flex;
