[Added] design for main och footer

--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -2,3 +2,5 @@
 
 @import './components/consumerNav';
 @import './components/consumerHeader';
+@import './components/consumerMain';
+@import './components/consumerFooter';
