--- a/Client/src/assets/styling/components/_consumerHeader.scss
+++ b/Client/src/assets/styling/components/_consumerHeader.scss
@@ -6,13 +6,15 @@ header {
 
     img {
         min-width: 100%;
-        height: 270px;
+        height: 100vw;
+        max-height: 350px;
         object-fit: cover;
     }
 
     .header-parent-container {
         width: 100vw;
-        height: 270px;
+        height: 100vw;
+        max-height: 350px;
         position: absolute;
         z-index: 1;
         top: 0;
@@ -25,6 +27,7 @@ header {
             display: flex;
             flex-direction: column;
             gap: 5px;
+            z-index:1;
 
             h2 {
                 color: $text-main;
@@ -78,6 +81,15 @@ header {
                     background-color: $el-active-blue-hover;
                 }
             }
+        }
+
+        .fade-container {
+            left: 0;
+            bottom: 0;
+            position: absolute;
+            width: 100vw;
+            height: 100px;
+            background: linear-gradient(182deg, rgba(9, 9, 9, 0.00) 20.95%, #090909 98.41%);
         }
     }
 }
