--- a/Client/src/assets/styling/components/_consumerHeader.scss
+++ b/Client/src/assets/styling/components/_consumerHeader.scss
@@ -93,3 +93,48 @@ header {
         }
     }
 }
+
+@media screen and (min-width: 700px) {
+    header {
+    
+        img {
+            max-height: 400px;
+        }
+    
+        .header-parent-container {
+            max-height: 400px;
+            padding: 32px;
+    
+            .register-tab {
+                width: 200px;
+    
+                h2 {
+                    font-size: 1.5rem;
+                }
+    
+                p {
+                    font-size: 1rem;
+                }
+    
+                input {
+                    height: 37px;
+                    font-size: 0.9rem;
+                }
+    
+                button {
+                    font-size: 0.9rem;
+                    height: 37px;
+                }
+            }
+    
+            .fade-container {
+                left: 0;
+                bottom: 0;
+                position: absolute;
+                width: 100vw;
+                height: 100px;
+                background: linear-gradient(182deg, rgba(9, 9, 9, 0.00) 20.95%, #090909 98.41%);
+            }
+        }
+    }
+}
