[Added] styling for desktop

--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -1,5 +1,6 @@
 $text-main: #D9D9D9;
-$text-secondary: #3E3E3E;
+$text-secondary: #090909;
+$text-third: #3E3E3E;
 
 $el-white-main: #D9D9D9;
 $el-active-blue: #0D3FF1;
