--- a/Client/src/assets/styling/components/_consumerFooter.scss
+++ b/Client/src/assets/styling/components/_consumerFooter.scss
@@ -36,3 +36,9 @@ footer {
         padding: 60px 32px;
     }
 }
+
+@media screen and (min-width: 1300px) {
+    footer {
+        padding: 70px 64px;
+    }
+}
