[Removed] unused files

--- a/Client/src/assets/styling/abstracts/_colors.scss
+++ b/Client/src/assets/styling/abstracts/_colors.scss
@@ -8,6 +8,8 @@ $el-active-blue-hover: #120DF1;
 $el-inactive-blue: #4C70F0;
 $el-inactive-gray: #3E3E3E;
 $el-border-gray: #232323;
+$el-border-gray-focus: #161616;
+$el-bg-gray: #171717;
 
 $gr-light-blue: #0D3FF1;
 $gr-dark-blue: #0D31F1;
