--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -4,3 +4,4 @@
 @import './components/consumerHeader';
 @import './components/consumerMain';
 @import './components/consumerFooter';
+@import './components/registerForm';
