[Logic] to show the user that their mail is already in use

--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -5,3 +5,4 @@
 @import './components/consumerMain';
 @import './components/consumerFooter';
 @import './components/registerForm';
+@import './components/dialog'
