--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -5,4 +5,5 @@
 @import './components/consumerMain';
 @import './components/consumerFooter';
 @import './components/registerForm';
+@import './components/registerDialog';
 @import './components/dialog'
