--- a/Client/src/assets/styling/components/_registerForm.scss
+++ b/Client/src/assets/styling/components/_registerForm.scss
@@ -19,6 +19,26 @@
         justify-content: center;
     }
 
+    .btn-back {
+        transition: all 0.2s ease-in-out;
+        background: transparent;
+        color: $text-main;
+        width: 45px;
+        height: 45px;
+        border-radius: 12px;
+        border: 2px solid $el-border-gray;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            transition: all 0.2s ease-in-out;
+            border: 2px solid $el-active-blue;
+            color: $el-active-blue;
+            cursor: pointer;
+        }
+    }
+
     h1 {
         color: $text-main;
         font-family: map-get($font-title-black, font-family);
