--- a/Client/src/assets/styling/main.scss
+++ b/Client/src/assets/styling/main.scss
@@ -5,6 +5,7 @@
 @import './components/consumerMain';
 @import './components/consumerFooter';
 @import './components/registerFormMobile';
+@import './components/registerFormTablet';
 @import './components/registerDialog';
 @import './components/dialog';
 @import './components/blueLine'
