--- a/Client/src/assets/styling/components/_blueLine.scss
+++ b/Client/src/assets/styling/components/_blueLine.scss
@@ -1,5 +1,5 @@
 .blue-line {
-    width: 100vw;
+    max-width: 100vw;
     height: 2px;
     background: linear-gradient(to right, #0d3ef100, #0D31F1, #0d3ef100);
     margin: auto;
