--- a/Client/src/assets/styling/components/_dialog.scss
+++ b/Client/src/assets/styling/components/_dialog.scss
@@ -17,6 +17,8 @@
         display: flex;
         flex-direction: column;
         gap: 30px;
+        max-width: 300px;
+        margin: auto;
 
         p {
             color: $text-main;
