--- a/Client/src/assets/styling/components/_consumerMain.scss
+++ b/Client/src/assets/styling/components/_consumerMain.scss
@@ -102,7 +102,7 @@ main {
     }
 
     .promotion-container {
-        padding: 30px 16px;
+        padding: 16px 16px 64px 16px;
         display: flex;
         flex-direction: column;
         gap: 20px;
@@ -119,10 +119,8 @@ main {
 
             input {
                 transition: all 0.2s ease-in-out;
-                margin: 10px 0 15px 0;
                 padding: 10px;
-                border: none;
-                outline: 2px solid $el-white-main;
+                border: 2px solid $el-white-main; 
                 border-radius: 6px;
                 height: 35px;
                 background: transparent;
@@ -130,11 +128,12 @@ main {
     
                 &:focus {
                     transition: all 0.2s ease-in-out;
-                    outline: 2px solid $el-active-blue;
+                    border: 2px solid $el-active-blue;
+                    outline: none;
                 }
             }
     
-            button {
+            .main-register-btn {
                 transition: all 0.2s ease-in-out;
                 background-color: $el-active-blue;
                 border: none;
@@ -143,6 +142,7 @@ main {
                 font-weight: map-get($font-title-bold, font-weight);
                 height: 35px;
                 border-radius: 50px;
+                margin-top: 20px;
     
                 &:hover {
                     transition: all 0.2s ease-in-out;
@@ -205,7 +205,7 @@ main {
         }
     
         .promotion-container {
-            padding: 40px 32px;
+            padding: 32px 32px 64px 32px;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -305,8 +305,11 @@ main {
                 li {
                     font-size: 1rem;
                 }
-            }
+            } 
         }
-        
+
+        .promotion-container {
+            padding: 32px 64px 64px 64px;
+        }
     }
 }
