[Added] logic to sign in

--- a/Client/src/assets/styling/components/_registerFormTablet.scss
+++ b/Client/src/assets/styling/components/_registerFormTablet.scss
@@ -13,7 +13,7 @@
         padding: 0;
         margin-bottom: 32px;
 
-        .btn-back {
+        .router-link {
             background: transparent;
             color: $text-main;
             width: 45px;
