--- a/Client/src/assets/styling/components/_registerFormMobile.scss
+++ b/Client/src/assets/styling/components/_registerFormMobile.scss
@@ -69,6 +69,35 @@
             }
         }
 
+        .mobile-register-form-select {
+            position: relative;
+            transition: all 0.2s ease-in-out;
+            margin: 10px 0 20px 0;
+            width: calc(100vw - 32px);
+            height: 42px;
+            background-color: $el-bg-gray;
+            color: $text-main;
+            border: 2px solid $el-border-gray;
+            padding: 10px;
+            border-radius: 10px;
+            z-index: 1;
+
+            &:focus {
+                transition: all 0.2s ease-in-out;
+                outline: none;
+                border: 2px solid transparent;
+                border-radius: 10px;
+                background-image: linear-gradient($el-border-gray-focus, $el-border-gray-focus), 
+                linear-gradient(
+                    to bottom,
+                    rgb(13, 63, 241),
+                    rgb(13, 63, 241, 0.2)
+                  );
+                background-origin: border-box;
+                background-clip: padding-box, border-box;
+            }
+        }
+
         .input-error {
             transition: all 0.2s ease-in-out;
             outline: none;
